# recordbox

./: .gitignore  Cargo.toml  README.md  config.example.yaml  frontend.html  recordbox.code-workspace  run.sh
.github/workflows/: ci.yml
backend/: Cargo.toml
backend/src/: main.rs  server.rs
backend/src/autotag/: deezer.rs  spotifydb.rs
frontend/: Cargo.toml  app.js  index.html  style.css
frontend/pkg/: .gitignore  index.html
frontend/src/: app.rs  lib.rs  request.rs  shader.wgsl  state.rs
frontend/src/boilerplate/: mod.rs  render.rs  shader.wgsl  ui.rs  window.rs
src/: config.rs  main.rs  server.rs  sync.rs  tagser.rs  util.rs
src/autotag/: deezer.rs  lrclib.rs  mod.rs  musicbrainz.rs
