[workspace]
members = ["backend", "frontend"]
resolver = "3"

[workspace.package]
version = "0.1.0"
license = "GPL-3.0-only"
edition = "2024"

[profile.release]
codegen-units = 1
debug = 0
lto = "fat"
opt-level = 3
panic = "abort"
strip = "symbols"

[profile.dev]
opt-level = 1
overflow-checks = true

[profile.dev.package."*"]
opt-level = 3