[package]
name = "recordbox-ui"
description = "A fluent music library manager frontend"

version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive", "min_const_generics", "wasm_simd"] }
console_error_panic_hook = { version = "0.1.7", optional = true }
console_log = { version = "1.0.0", features = ["color"], optional = true }
image = { version = "0.25.9", default-features = false, features = ["png"] }
wasm-bindgen = "0.2.114"
wasm-bindgen-futures = "0.4.64"
web-sys = { version = "0.3.91", features = ["Document", 'Headers', "HtmlCanvasElement", 'Request', 'RequestInit', 'Response', "Window"] }
wgpu = { version = "28.0.0", default-features = false, features = ["webgpu", "wgsl", "std", "parking_lot"] }
winit = "0.30.12"

[features]
console = ["console_error_panic_hook", "console_log"]
